# auto_pilot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/algo-alloc/: Cargo.toml
crates/algo-alloc/src/: lib.rs
crates/algo-ekf/: Cargo.toml
crates/algo-ekf/src/: lib.rs
crates/algo-fdir/: Cargo.toml
crates/algo-fdir/src/: lib.rs
crates/algo-indi/: Cargo.toml
crates/algo-indi/src/: lib.rs
crates/algo-nmpc/: Cargo.toml
crates/algo-nmpc/src/: lib.rs
crates/app-copter/: Cargo.toml  build.rs  memory.x
crates/app-copter/src/: lib.rs  main.rs
crates/comms-mavlink/: Cargo.toml
crates/comms-mavlink/src/: lib.rs
crates/core-bus/: Cargo.toml
crates/core-bus/src/: lib.rs
crates/core-hal/: Cargo.toml
crates/core-hal/src/: imu_buffer.rs  lib.rs  traits.rs
crates/core-hal/src/imu/: icm42688.rs  mod.rs
crates/core-rtos/: Cargo.toml
crates/core-rtos/src/: lib.rs
crates/nn-runtime/: Cargo.toml
crates/nn-runtime/src/: lib.rs
crates/sim-hil/: Cargo.toml
crates/sim-hil/examples/: controller_shootout.rs  open_rrd.rs  sitl_mavlink.rs  sitl_rerun.rs
crates/sim-hil/src/: gazebo.rs  lib.rs  mavlink_udp.rs  residual_mpc.rs  rng.rs  sitl.rs  zenoh_bus.rs  zenoh_telemetry.rs
docker/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
docs/: alerts.md  plan.md  topics.md
docs/progress/: 0001-m0-scaffold.md  0002-docker-container.md  0003-m0.5-verification.md  0004-quaternion-invariant.md  0005-kani-harness.md  0006-priority-proofs.md  0007-kani-in-image.md  0008-healthlevel-proofs.md  0009-state-24d-vector.md  0010-imu-buffer.md  0011-ekf-predict.md  0012-covariance-scaffold.md  0013-process-noise-placeholder-f.md  0014-kinematic-f.md  0015-dq-dq-jacobian.md  0016-dq-dbg-jacobian.md  0017-dv-dq-dv-dba.md  0018-dp-dq-dp-dba.md  0019-predict-step-end-to-end.md  0020-gps-innovation.md  0021-gps-update-joseph.md  0022-magnetometer-update.md  0023-barometer-update.md  0024-end-to-end-simulation.md  0025-nis-fdir-integration.md  0026-indi-inner-loop.md  0027-control-allocation.md  0028-rate-loop-assembly.md  0029-attitude-loop.md  0030-position-loop-baseline.md  0031-outer-step-stitching.md  0032-measurement-hooks-fdir.md  0033-sitl-first-hover.md  0034-realistic-sitl.md  0035-pi-cascade.md  0036-wind-feedforward.md  0037-drag-aware-predict.md  0038-app-drag-wiring.md  0039-wind-observable-jacobian.md  0040-wind-identification-sitl.md  (+49 more)
