[package]
name = "algo-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Control allocation: map body-torque + thrust demand to N actuator commands via QP."

[lints]
workspace = true

[dependencies]
nalgebra = { workspace = true }
