[package]
name = "algo-fdir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fault detection, isolation, and recovery: sensor voting, actuator monitoring, health state machine."

[lints]
workspace = true

[dependencies]
heapless = { workspace = true }
