[package]
name = "algo-indi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Incremental Nonlinear Dynamic Inversion angular-rate inner loop."

[lints]
workspace = true

[dependencies]
nalgebra = { workspace = true }
libm = { workspace = true }
