[package]
name = "app-copter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multirotor application binary: composes HAL, RTOS, bus, estimator, and controllers."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "app-copter"
path = "src/main.rs"

# Bare-metal firmware entry. Links a .elf for thumbv7em-none-eabihf
# using the memory.x layout in this crate.
[[bin]]
name = "firmware"
path = "src/bin/firmware.rs"

[dependencies]
core-hal    = { path = "../core-hal" }
core-rtos   = { path = "../core-rtos" }
core-bus    = { path = "../core-bus" }
algo-ekf    = { path = "../algo-ekf" }
algo-nmpc   = { path = "../algo-nmpc" }
algo-indi   = { path = "../algo-indi" }
algo-alloc  = { path = "../algo-alloc" }
algo-fdir   = { path = "../algo-fdir" }
nn-runtime  = { path = "../nn-runtime" }
comms-mavlink = { path = "../comms-mavlink" }
nalgebra = { workspace = true }
libm = { workspace = true }

# Embedded entry-point deps: only pulled when cross-compiling for a
# bare-metal Arm target. Host builds (tests, `app-copter` host binary,
# sim-hil) never see these.
[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
