[package]
name = "comms-mavlink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MAVLink 2 adapter for ground-control-station compatibility (QGC / MissionPlanner)."

[lints]
workspace = true

[dependencies]
heapless = { workspace = true }
mavlink = { workspace = true }
nalgebra = { workspace = true }
libm = { workspace = true }
