[package]
name = "core-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Zenoh-Pico integration for ROS 2 / DDS native messaging."

[lints]
workspace = true

[dependencies]
heapless = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
