[package]
name = "sim-hil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side harness for SITL / HITL — bridges firmware with Gazebo / AerialGym."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
libm = { workspace = true }
algo-ekf = { path = "../algo-ekf" }
algo-indi = { path = "../algo-indi" }
algo-nmpc = { path = "../algo-nmpc" }
core-hal = { path = "../core-hal" }
comms-mavlink = { path = "../comms-mavlink" }
mavlink = { workspace = true }

[dev-dependencies]
app-copter = { path = "../app-copter" }
algo-fdir = { path = "../algo-fdir" }

[[example]]
name = "sitl_mavlink"
path = "examples/sitl_mavlink.rs"
