[package]
name = "sim-hil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side harness for SITL / HITL — bridges firmware with Gazebo / AerialGym."

[lints]
workspace = true

[features]
default = []
# Enable the Zenoh host session + typed pub/sub wrapper. Gated because
# zenoh pulls ~80 transitive crates and bloats CI build times.
zenoh-host = ["dep:zenoh", "dep:core-bus", "dep:serde"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
libm = { workspace = true }
algo-ekf = { path = "../algo-ekf" }
algo-indi = { path = "../algo-indi" }
algo-nmpc = { path = "../algo-nmpc" }
core-hal = { path = "../core-hal" }
comms-mavlink = { path = "../comms-mavlink" }
mavlink = { workspace = true }
# Optional Zenoh host integration (see `zenoh-host` feature).
core-bus = { path = "../core-bus", optional = true }
zenoh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
app-copter = { path = "../app-copter" }
algo-fdir = { path = "../algo-fdir" }

[[example]]
name = "sitl_mavlink"
path = "examples/sitl_mavlink.rs"
