[package]
name = "sim-hil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side harness for SITL / HITL — bridges firmware with Gazebo / AerialGym."

[lints]
workspace = true

[features]
default = []
# Enable the Zenoh host session + typed pub/sub wrapper. Gated because
# zenoh pulls ~80 transitive crates and bloats CI build times.
zenoh-host = ["dep:zenoh", "dep:core-bus", "dep:serde"]
# Enable the rerun.io 3D visualization example. Gated because rerun
# pulls ~300 transitive crates (wgpu, eframe, image decoders) and
# blows up CI build time if always-on.
rerun-viz = ["dep:rerun"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
libm = { workspace = true }
algo-ekf = { path = "../algo-ekf" }
algo-indi = { path = "../algo-indi" }
algo-nmpc = { path = "../algo-nmpc" }
nn-runtime = { path = "../nn-runtime" }
core-hal = { path = "../core-hal" }
comms-mavlink = { path = "../comms-mavlink" }
mavlink = { workspace = true }
# sim-hil exists to close the loop around `app-copter`, so the
# dependency is unconditional now — promoting from the M10-era
# dev-dep + zenoh-host-feature split so SITL runner helpers are
# reachable from examples and non-test binaries.
app-copter = { path = "../app-copter" }
# Optional Zenoh host integration (see `zenoh-host` feature).
core-bus = { path = "../core-bus", optional = true }
zenoh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
# rerun.io — robotics / ML time-aligned 3D + time-series viewer.
# Pinned to a concrete major so feature-gated CI doesn't get churn
# from minor breaking changes.
rerun = { version = "0.22", default-features = false, features = ["sdk", "native_viewer"], optional = true }

[dev-dependencies]
algo-fdir = { path = "../algo-fdir" }

[[example]]
name = "sitl_mavlink"
path = "examples/sitl_mavlink.rs"

[[example]]
name = "controller_shootout"
path = "examples/controller_shootout.rs"

[[example]]
name = "sitl_rerun"
path = "examples/sitl_rerun.rs"
required-features = ["rerun-viz"]

[[example]]
name = "open_rrd"
path = "examples/open_rrd.rs"
required-features = ["rerun-viz"]
